<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grupojvg.jfernando.visitorscontrol.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/titleTxtV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTxtV"
            android:layout_centerInParent="true">
        <TextView
            android:id="@+id/userTxtV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="36dp"
            android:text="@string/name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
        <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name_hint"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLayout"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/passTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/password"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/password_hint"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titleTxtV"
            android:layout_alignStart="@+id/titleTxtV"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/btnIngresar" />
        </LinearLayout>

        <TextView
            android:id="@+id/groupVrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/appVersion"
            android:layout_gravity="right"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="10sp" />
    </LinearLayout>

</android.widget.RelativeLayout>
